--- a/css/styles.css
+++ b/css/styles.css
@@ -162,11 +162,11 @@ a {
     color: #2e2f42;
 }
 
-.team-list {
+.team-list {}
+
+.team-item {
     background-color: #FFFFFF
 }
-
-.team-item {}
 
 .team-pic {}
 
